--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --harmony",
-    "start": "node --harmony server.js"
+    "test": "mocha --harmony-proxies",
+    "start": "node --harmony-proxies server.js"
   },
   "repository": {
     "type": "git",
